fix: Fix `component_portal` CSS issues in `mosaic` mode with paginator micro (overlapping).

--- a/core/paginator/css/paginator.less
+++ b/core/paginator/css/paginator.less
@@ -189,6 +189,7 @@
 
 		.displayed_total_records {
 			padding: 0.25rem;
+			padding-right: 0.1rem;
 		}
 
 		// text as '3-11'
@@ -197,6 +198,10 @@
 			min-width: fit-content;
 			min-height: unset;
 		}//end .paginator_info
+
+		.page_info {
+			padding-left: 0.1rem;
+		}
 	}//end .content_data
 
 }//end .wrapper_paginator
